# cfeasy

./: CHANGELOG.md  README.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
cfeasy/: SKILL.md  _modidx.py  core.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
